syntax = "proto3";

package auth.v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "auth/v1/basic.proto";

option go_package = "heytom-auth/api/auth/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.auth.v1";
option java_outer_classname = "AuthProtoV1";

// 用户服务
service User {
  rpc PageList(PageUserRequest) returns (PageUserResponse) {
    option (google.api.http) = {
      get: "/user/list"
    };
  }
  rpc Get(GetUserRequest) returns (UserInfo) {
    option (google.api.http) = {
      get: "/user/{id}"
    };
  }
  rpc Create(CreateUserRequest) returns (UserInfo) {
    option (google.api.http) = {
      post: "/user"
      body: "*"
    };
  }
  rpc Update(UpdateUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/user/{id}"
      body: "*"
    };
  }
  rpc Delete(DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/user/{id}"
    };
  }
}

message PageUserRequest {
    PageRequest page  = 1;
}

message PageUserResponse {
  int64 total = 1;
  repeated UserInfo users = 2;
}


// 用户相关消息
message UserInfo {
  int64 id = 1;
  string name = 2;
  string mobile = 3;
  repeated int64 role_ids = 4;
  int64 organization_id = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message CreateUserRequest {
  string name = 1;
  string mobile = 2;
  repeated int64 role_ids = 3;
  int64 organization_id = 4;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string mobile = 3;
  repeated int64 role_ids = 4;
  int64 organization_id = 5;
}



message GetUserRequest {
  int64 id = 1;
}

message DeleteUserRequest{
  int64 id = 1;
}
